web/src/styles/base/height-width.scss
.width-max-content {
  width: max-content;
}

.width-11rem {
  width: 11rem;
}

.width-15rem {
  width: 15rem;
}

.minh-30 {
  min-height: 30rem;
}

.minh-40 {
  min-height: 40rem;
}

.minh-38 {
  min-height: 38rem;
}

.minw-30 {
  min-width: 30rem;
}

.padding-y-11px {
  padding-top: 11px;
  padding-bottom: 11px;
}

.padding-y-14px {
  padding-top: 14px;
  padding-bottom: 14px;
}

.min-height-575rem {
  min-height: 5.75rem;
}

.width-100 {
  width: 100% !important;
}

.width-80 {
  width: 80%;
}

.width-auto {
  width: auto !important;
}

.max-width-38rem {
  max-width: 38rem;
}

.pdfPageWidthInPx {
  width: 713px;
}

